new commits as of dec. 29.2021

--- a/enchanted.html
+++ b/enchanted.html
@@ -168,8 +168,8 @@
         </div>
       </div>
 
-       <!-----<div class="btn-box">------------>
-        <button>Order</button>
+      <!-----<div class="btn-box">------------>
+      <button>Order</button>
       <!-----</div>------>
 
       <footer>
@@ -180,8 +180,7 @@
           </li>
           <li><i class="fas fa-hands-helping"></i>Become a partner</li>
           <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a>
-          </li>
+          <li><a href="mailto:webmaster@example.com">Contact </a></li>
         </ul>
       </footer>
     </main>
