--- a/fullpalette.html
+++ b/fullpalette.html
@@ -7,8 +7,7 @@
     <link href="css/fullpalette.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/6d462f4442.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
 
     <title>The Full Palette</title>
   </head>
@@ -26,7 +25,7 @@
         <div class="fp-title">The Full Palette</div>
         <i class="far fa-heart"></i>
       </div>
-      <div class="menu-content"><span class="underline">ENTR</span>ESS</div>
+      <div class="menu-content"><span class="underline">ENTR</span>EE</div>
 
       <!-----menu-items1--------------->
       <div class="menu-items">
@@ -37,6 +36,7 @@
         <div class="sub-menu">
           <div>with southern French spices</div>
           <div>25€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
