Commits as of 3_1_2022

--- a/enchanted.html
+++ b/enchanted.html
@@ -30,7 +30,7 @@
       </div>
 
       <!-----ENTRESS--------------->
-      <div class="menu-content"><span class="underline">ENTR</span>ESS</div>
+      <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
       <!-----ENTRESS--------------->
 
@@ -43,6 +43,7 @@
         <div class="sub-menu">
           <div>with truffle cream</div>
           <div>25€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
