--- a/fullpalette.html
+++ b/fullpalette.html
@@ -25,7 +25,7 @@
         <div class="fp-title">The Full Palette</div>
         <i class="far fa-heart"></i>
       </div>
-      <div class="menu-content"><span class="underline">ENTR</span>EE</div>
+      <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
       <!-----menu-items1--------------->
       <div class="menu-items">
