--- a/legourmand.html
+++ b/legourmand.html
@@ -26,7 +26,7 @@
         <div class="legour-title">Le Gourmand</div>
         <i class="far fa-heart"></i>
       </div>
-      <div class="menu-content"><span class="underline">ENTR</span>ESS</div>
+      <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
       <!-----menu-items1--------------->
       <div class="menu-items">
@@ -37,6 +37,7 @@
         <div class="sub-menu">
           <div>seasoned with yuzu</div>
           <div>25€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
