--- a/bastille.html
+++ b/bastille.html
@@ -26,7 +26,7 @@
         <div class="basti-title">Bastille</div>
         <i class="far fa-heart"></i>
       </div>
-      <div class="menu-content"><span class="underline">ENTR</span>ESS</div>
+      <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
       <!-----menu-items1--------------->
       <div class="menu-items">
@@ -37,6 +37,8 @@
         <div class="sub-menu">
           <div>with orange zest</div>
           <div>25€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+
         </div>
       </div>
 
