--- a/bastille.html
+++ b/bastille.html
@@ -37,8 +37,9 @@
         <div class="sub-menu">
           <div>with orange zest</div>
           <div>25€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
-
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
@@ -144,23 +145,20 @@
       </div>
 
       <!-----<div class="btn-box">------------>
-        <button>Order</button>
+      <button>Order</button>
       <!-----</div>------>
-
 
       <footer>
         <h2 class="footer_logo">ohmyfood</h2>
         <ul>
-          <li><i class="fas fa-utensils btn-icons"></i>  Suggest a restaurant </li>
-          <li> <i class="fas fa-hands-helping"></i>Become a partner</li>
-          <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a>
+          <li>
+            <i class="fas fa-utensils btn-icons"></i> Suggest a restaurant
           </li>
+          <li><i class="fas fa-hands-helping"></i>Become a partner</li>
+          <li>Legal</li>
+          <li><a href="mailto:webmaster@example.com">Contact </a></li>
         </ul>
       </footer>
-
     </main>
-
-   
   </body>
 </html>
