--- a/bastille.html
+++ b/bastille.html
@@ -52,6 +52,9 @@
         <div class="sub-menu">
           <div>Carrots, parsnips, Jerusalem artichoke</div>
           <div>35€</div>
+        <div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+</div>>
         </div>
       </div>
 
@@ -64,6 +67,7 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>20€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -78,6 +82,7 @@
         <div class="sub-menu">
           <div>with mashed parsnip</div>
           <div>40€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -91,6 +96,7 @@
         <div class="sub-menu">
           <div>with mashed potatoes</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -103,6 +109,7 @@
         <div class="sub-menu">
           <div>with Vegetable gnocchis</div>
           <div>44€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -117,6 +124,7 @@
         <div class="sub-menu">
           <div>with hazelnut butter</div>
           <div>18€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -129,6 +137,7 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>22€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -141,6 +150,7 @@
         <div class="sub-menu">
           <div>with blueberries and Marzipan</div>
           <div>23€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
