--- a/enchanted.html
+++ b/enchanted.html
@@ -56,6 +56,7 @@
         <div class="sub-menu">
           <div>with backwheat blinis</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -68,6 +69,7 @@
         <div class="sub-menu">
           <div>marinated with orange zest</div>
           <div>20€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -81,6 +83,8 @@
         <div class="sub-menu">
           <div>with fig jam and grilled baguette</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+        
         </div>
       </div>
 
@@ -100,6 +104,8 @@
         <div class="sub-menu">
           <div>with white celery puree</div>
           <div>40€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+
         </div>
       </div>
 
@@ -112,6 +118,7 @@
         <div class="sub-menu">
           <div>with mashed sweet potatoes</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -124,6 +131,7 @@
         <div class="sub-menu">
           <div>with wild rice and lemon zest</div>
           <div>44€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -142,6 +150,7 @@
         <div class="sub-menu">
           <div>with caramel butter ice cream</div>
           <div>18€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -154,6 +163,7 @@
         <div class="sub-menu">
           <div>with lemon drizzle</div>
           <div>22€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -166,6 +176,7 @@
         <div class="sub-menu">
           <div>Destructured</div>
           <div>23€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
