--- a/legourmand.html
+++ b/legourmand.html
@@ -50,6 +50,7 @@
         <div class="sub-menu">
           <div>with seasonal Vegetables</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -62,6 +63,7 @@
         <div class="sub-menu">
           <div>with truffles</div>
           <div>20€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -76,6 +78,7 @@
         <div class="sub-menu">
           <div>with truffle cream</div>
           <div>44€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -89,6 +92,7 @@
         <div class="sub-menu">
           <div>with seasonal Vegetables</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -101,6 +105,7 @@
         <div class="sub-menu">
           <div>with mashed parshnips</div>
           <div>44€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -115,6 +120,7 @@
         <div class="sub-menu">
           <div>Chef'S choice</div>
           <div>18€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -127,6 +133,7 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>22€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -139,6 +146,7 @@
         <div class="sub-menu">
           <div>with hazelnuts</div>
           <div>23€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
