--- a/fullpalette.html
+++ b/fullpalette.html
@@ -49,6 +49,7 @@
         <div class="sub-menu">
           <div>with black truffle shavings</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -61,6 +62,7 @@
         <div class="sub-menu">
           <div>...</div>
           <div>20€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -75,6 +77,7 @@
         <div class="sub-menu">
           <div>with delicately sliced and seasoned veg...</div>
           <div>40€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -88,6 +91,7 @@
         <div class="sub-menu">
           <div>with black truffle and pureed parsnips</div>
           <div>35€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -99,7 +103,28 @@
 
         <div class="sub-menu">
           <div>with citrus dressing</div>
-          <div>44€</div>
+          <div>44€</div>        
+<!----
+<div class="container">
+    <button class="btn">Transform!</button>
+    <div class="boxes">
+        <div class="boxes__base boxes--rotDegrees">rotate(360deg)</div>
+        <div class="boxes__base boxes--rotTurns">rotate(1turn)</div>
+    </div>
+</div>
+
+
+
+<div class="container">
+ ####  <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+<div class="checkbox">
+
+       <div class="checkbox__base boxes--rotDegrees">rotate(360deg)</div>
+        
+</div>
+
+-->
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -114,6 +139,7 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>18€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -126,6 +152,7 @@
         <div class="sub-menu">
           <div>with vanilla ice cream</div>
           <div>22€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
@@ -138,6 +165,7 @@
         <div class="sub-menu">
           <div>with spicesd and black truffle</div>
           <div>23€</div>
+          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
         </div>
       </div>
 
