new changes as of 13-01-22

--- a/enchanted.html
+++ b/enchanted.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>The Echanted Plate</title>
+    <title>The Enchanted Plate</title>
   </head>
 
   <body>
@@ -25,16 +25,12 @@
 
     <main>
       <div class="menu-title">
-        <div class="enchanted-title">The Echanted Plate</div>
+        <div class="enchanted-title">The Enchanted Plate</div>
         <i class="far fa-heart"></i>
       </div>
 
-      <!-----ENTRESS--------------->
       <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
-      <!-----ENTRESS--------------->
-
-      <!-----menu-items1--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Foie Gras Ravioli</h4>
@@ -43,11 +39,12 @@
         <div class="sub-menu">
           <div>with truffle cream</div>
           <div>25€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items2--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Oscietra Caviar</h4>
@@ -56,11 +53,12 @@
         <div class="sub-menu">
           <div>with backwheat blinis</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items3--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Lobster and Leak Foam</h4>
@@ -69,11 +67,11 @@
         <div class="sub-menu">
           <div>marinated with orange zest</div>
           <div>20€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
-
-      <!-----menu-items4--------------->
 
       <div class="menu-items">
         <div class="menu-desc">
@@ -83,18 +81,13 @@
         <div class="sub-menu">
           <div>with fig jam and grilled baguette</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
-        
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----MAIN DISH--------------->
-
       <div class="menu-content"><span class="underline">MAIN</span> DISH</div>
-
-      <!-----MAIN DISH--------------->
-
-      <!-----menu-items5--------------->
 
       <div class="menu-items">
         <div class="menu-desc">
@@ -104,12 +97,12 @@
         <div class="sub-menu">
           <div>with white celery puree</div>
           <div>40€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
-
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items6--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Pan-Fried Lobster</h4>
@@ -118,11 +111,12 @@
         <div class="sub-menu">
           <div>with mashed sweet potatoes</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items7--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Braised Ox Tail</h4>
@@ -131,17 +125,14 @@
         <div class="sub-menu">
           <div>with wild rice and lemon zest</div>
           <div>44€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----DESSERTS--------------->
-
       <div class="menu-content"><span class="underline">DESS</span>ERTS</div>
 
-      <!-----DESSERTS--------------->
-
-      <!-----menu-items8--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Chocolate and Hazelnut Macaroons</h4>
@@ -150,11 +141,12 @@
         <div class="sub-menu">
           <div>with caramel butter ice cream</div>
           <div>18€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items9--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Baba au rhum</h4>
@@ -163,11 +155,12 @@
         <div class="sub-menu">
           <div>with lemon drizzle</div>
           <div>22€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items10--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Lemon Meringue Pie</h4>
@@ -176,25 +169,23 @@
         <div class="sub-menu">
           <div>Destructured</div>
           <div>23€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----<div class="btn-box">------------>
       <button>Order</button>
-      <!-----</div>------>
-
-      <footer>
-        <h2 class="footer_logo">ohmyfood</h2>
-        <ul>
-          <li>
-            <i class="fas fa-utensils btn-icons"></i> Suggest a restaurant
-          </li>
-          <li><i class="fas fa-hands-helping"></i>Become a partner</li>
-          <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a></li>
-        </ul>
-      </footer>
     </main>
+
+    <footer>
+      <h2 class="footer_logo">ohmyfood</h2>
+      <ul>
+        <li><i class="fas fa-utensils btn-icons"></i> Suggest a restaurant</li>
+        <li><i class="fas fa-hands-helping"></i>Become a partner</li>
+        <li>Legal</li>
+        <li><a href="mailto:webmaster@example.com">Contact </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
