--- a/legourmand.html
+++ b/legourmand.html
@@ -28,7 +28,6 @@
       </div>
       <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
-      <!-----menu-items1--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Tuna Carpaccio</h4>
@@ -37,11 +36,12 @@
         <div class="sub-menu">
           <div>seasoned with yuzu</div>
           <div>25€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items2--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Crunchy Lobster Croquets</h4>
@@ -50,11 +50,12 @@
         <div class="sub-menu">
           <div>with seasonal Vegetables</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items3--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Mushroom Soup</h4>
@@ -63,13 +64,14 @@
         <div class="sub-menu">
           <div>with truffles</div>
           <div>20€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">MAIN</span> DISH</div>
 
-      <!-----menu-items4--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Roast Chicken with Provincal Herbs</h4>
@@ -78,11 +80,11 @@
         <div class="sub-menu">
           <div>with truffle cream</div>
           <div>44€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
-
-      <!-----menu-items5--------------->
 
       <div class="menu-items">
         <div class="menu-desc">
@@ -92,11 +94,12 @@
         <div class="sub-menu">
           <div>with seasonal Vegetables</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items6--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Angust Beef Ribs</h4>
@@ -105,39 +108,42 @@
         <div class="sub-menu">
           <div>with mashed parshnips</div>
           <div>44€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">DESS</span>ERTS</div>
 
-      <!-----menu-items7--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Assorted Dessert Plate</h4>
         </div>
 
         <div class="sub-menu">
-          <div>Chef'S choice</div>
+          <div>Chef's choice</div>
           <div>18€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items8--------------->
       <div class="menu-items">
         <div class="menu-desc">
-          <h4>Crème Brulée</h4>
+          <h4>Crème brulée</h4>
         </div>
 
         <div class="sub-menu">
           <div>Revisited</div>
           <div>22€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items9--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Tiramisu</h4>
@@ -146,25 +152,22 @@
         <div class="sub-menu">
           <div>with hazelnuts</div>
           <div>23€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----<div class="btn-box">------------>
       <button>Order</button>
-      <!-----</div>------>
-
-      <footer>
-        <h2 class="footer_logo">ohmyfood</h2>
-        <ul>
-          <li>
-            <i class="fas fa-utensils btn-icons"></i> Suggest a restaurant
-          </li>
-          <li><i class="fas fa-hands-helping"></i>Become a partner</li>
-          <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a></li>
-        </ul>
-      </footer>
     </main>
+    <footer>
+      <h2 class="footer_logo">ohmyfood</h2>
+      <ul>
+        <li><i class="fas fa-utensils btn-icons"></i> Suggest a restaurant</li>
+        <li><i class="fas fa-hands-helping"></i>Become a partner</li>
+        <li>Legal</li>
+        <li><a href="mailto:webmaster@example.com">Contact </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
