--- a/bastille.html
+++ b/bastille.html
@@ -7,8 +7,8 @@
     <link href="css/bastille.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/6d462f4442.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
 
     <title>Bastille</title>
   </head>
@@ -28,7 +28,6 @@
       </div>
       <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
-      <!-----menu-items1--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Citrus Squid Carpaccio</h4>
@@ -43,7 +42,6 @@
         </div>
       </div>
 
-      <!-----menu-items2--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Grandmother's Vegetable Soup</h4>
@@ -52,13 +50,15 @@
         <div class="sub-menu">
           <div>Carrots, parsnips, Jerusalem artichoke</div>
           <div>35€</div>
-        <div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
-</div>>
+          <div>
+            <div class="check">
+              <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+            </div>
+          </div>
+          >
         </div>
       </div>
 
-      <!-----menu-items3--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Onion Soup</h4>
@@ -67,13 +67,14 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>20€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">MAIN</span> DISH</div>
 
-      <!-----menu-items4--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Scallops</h4>
@@ -82,11 +83,11 @@
         <div class="sub-menu">
           <div>with mashed parsnip</div>
           <div>40€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
-
-      <!-----menu-items5--------------->
 
       <div class="menu-items">
         <div class="menu-desc">
@@ -96,11 +97,12 @@
         <div class="sub-menu">
           <div>with mashed potatoes</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items6--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Game Hen</h4>
@@ -109,13 +111,14 @@
         <div class="sub-menu">
           <div>with Vegetable gnocchis</div>
           <div>44€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">DESS</span>ERTS</div>
 
-      <!-----menu-items7--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Floral Ice Cream</h4>
@@ -124,11 +127,12 @@
         <div class="sub-menu">
           <div>with hazelnut butter</div>
           <div>18€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items8--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Chocolate Lava Cake</h4>
@@ -137,38 +141,37 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>22€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items9--------------->
       <div class="menu-items">
         <div class="menu-desc">
-          <h4>Napoleon</h4>
+          <h4>Napolean</h4>
         </div>
 
         <div class="sub-menu">
-          <div>with blueberries and Marzipan</div>
+          <div>with blueberries and marzipan</div>
           <div>23€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----<div class="btn-box">------------>
       <button>Order</button>
-      <!-----</div>------>
-
-      <footer>
-        <h2 class="footer_logo">ohmyfood</h2>
-        <ul>
-          <li>
-            <i class="fas fa-utensils btn-icons"></i> Suggest a restaurant
-          </li>
-          <li><i class="fas fa-hands-helping"></i>Become a partner</li>
-          <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a></li>
-        </ul>
-      </footer>
     </main>
+
+    <footer>
+      <h2 class="footer_logo">ohmyfood</h2>
+      <ul>
+        <li><i class="fas fa-utensils btn-icons"></i> Suggest a restaurant</li>
+        <li><i class="fas fa-hands-helping"></i>Become a partner</li>
+        <li>Legal</li>
+        <li><a href="mailto:webmaster@example.com">Contact </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
