--- a/fullpalette.html
+++ b/fullpalette.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/fullpalette.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/6d462f4442.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6d462f4442.js"></script>
 
     <title>The Full Palette</title>
   </head>
@@ -25,9 +23,9 @@
         <div class="fp-title">The Full Palette</div>
         <i class="far fa-heart"></i>
       </div>
+      
       <div class="menu-content"><span class="underline">ENTR</span>EES</div>
 
-      <!-----menu-items1--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Escargot</h4>
@@ -36,11 +34,12 @@
         <div class="sub-menu">
           <div>with southern French spices</div>
           <div>25€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items2--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Duck Foie Gras</h4>
@@ -49,11 +48,12 @@
         <div class="sub-menu">
           <div>with black truffle shavings</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items3--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Fried egg</h4>
@@ -62,26 +62,27 @@
         <div class="sub-menu">
           <div>...</div>
           <div>20€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">MAIN</span> DISH</div>
 
-      <!-----menu-items4--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Herb-Encrusted Steak</h4>
         </div>
 
         <div class="sub-menu">
-          <div>with delicately sliced and seasoned veg...</div>
+          <div>With delicately sliced and seasoned veg...</div>
           <div>40€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
-
-      <!-----menu-items5--------------->
 
       <div class="menu-items">
         <div class="menu-desc">
@@ -91,11 +92,12 @@
         <div class="sub-menu">
           <div>with black truffle and pureed parsnips</div>
           <div>35€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items6--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Filet of Sole</h4>
@@ -103,34 +105,16 @@
 
         <div class="sub-menu">
           <div>with citrus dressing</div>
-          <div>44€</div>        
-<!----
-<div class="container">
-    <button class="btn">Transform!</button>
-    <div class="boxes">
-        <div class="boxes__base boxes--rotDegrees">rotate(360deg)</div>
-        <div class="boxes__base boxes--rotTurns">rotate(1turn)</div>
-    </div>
-</div>
+          <div>44€</div>
 
-
-
-<div class="container">
- ####  <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
-<div class="checkbox">
-
-       <div class="checkbox__base boxes--rotDegrees">rotate(360deg)</div>
-        
-</div>
-
--->
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
       <div class="menu-content"><span class="underline">DESS</span>ERTS</div>
 
-      <!-----menu-items7--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Paris-Brest</h4>
@@ -139,11 +123,12 @@
         <div class="sub-menu">
           <div>Revisited</div>
           <div>18€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items8--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Chocolate Macaroons</h4>
@@ -152,39 +137,37 @@
         <div class="sub-menu">
           <div>with vanilla ice cream</div>
           <div>22€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----menu-items9--------------->
       <div class="menu-items">
         <div class="menu-desc">
           <h4>Chocolate Mousse</h4>
         </div>
 
         <div class="sub-menu">
-          <div>with spicesd and black truffle</div>
+          <div>with spice and black truffle</div>
           <div>23€</div>
-          <div class="check"><i class="fas fa-check-circle fa-1x" aria-hidden="true"></i></div>
+          <div class="check">
+            <i class="fas fa-check-circle fa-1x" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
 
-      <!-----<div class="btn-box">------------>
-        <button>Order</button>
-      <!-----</div>------>
-
-      <footer>
-        <h2 class="footer_logo">ohmyfood</h2>
-        <ul>
-          <li>
-            <i class="fas fa-utensils btn-icons"></i> Suggest a restaurant
-          </li>
-          <li><i class="fas fa-hands-helping"></i>Become a partner</li>
-          <li>Legal</li>
-          <li><a href="mailto:webmaster@example.com">Contact </a>
-          </li>
-        </ul>
-      </footer>
+      <button>Order</button>
     </main>
+
+    <footer>
+      <h2 class="footer_logo">ohmyfood</h2>
+      <ul>
+        <li><i class="fas fa-utensils btn-icons"></i> Suggest a restaurant</li>
+        <li><i class="fas fa-hands-helping"></i>Become a partner</li>
+        <li>Legal</li>
+        <li><a href="mailto:webmaster@example.com">Contact </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
