latest commits as of 15_01_22

--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
     </main>
 
     <footer>
-      <h3 class="footer_logo">ohmyfood</h3>
+      <h2 class="footer_logo">ohmyfood</h2>
       <ul>
         <li><i class="fas fa-utensils btn-icons"></i> Suggest a restaurant</li>
-        <li><i class="fas fa-hands-helping"></i>Become a partner</li>
-        <li class="legal">Legal</li>
-        <li><a href="mailto:webmaster@example.com">Contact </a></li>
+        <li><i class="fas fa-hands-helping"></i> Become a partner</li>
+        <li>Legal</li>
+        <li><a href="mailto:webmaster@example.com"> Contact </a></li>
       </ul>
     </footer>
   </body>
